--- a/history
+++ b/history
@@ -1,2 +1,4 @@
 1  npm init
 2  npm install webpack webpack-cli --save-dev
+3  npm install babel-core babel-loader babel-preset-env --save-dev
+4  npm install            babel-loader@7                --save-dev
