--- a/history
+++ b/history
@@ -2,3 +2,6 @@
 2  npm install webpack webpack-cli --save-dev
 3  npm install babel-core babel-loader babel-preset-env --save-dev
 4  npm install            babel-loader@7                --save-dev
+5  npm install extract-text-webpack-plugin --save-dev
+6  npm install style-loader css-loader --save-dev
+7  npm install extract-text-webpack-plugin@next -D
