--- a/history
+++ b/history
@@ -6,3 +6,4 @@
 6  npm install style-loader css-loader --save-dev
 7  npm install extract-text-webpack-plugin@next -D
 8  npm install node-sass sass-loader -D
+9  npm install html-webpack-plugin -D
